<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="baby_item">Baby item</string>
    <string name="quantity">Quantity</string>
    <string name="colour">Colour</string>
    <string name="size">Size</string>
    <string name="save_button">Save</string>
    <string name="drop_table">Drop table if exists</string>
    <string name="babyitem">BabyItem</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="update_item_text">Update Item</string>
    <string name="update_text">Update</string>
</resources>
