<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/enter_item"
                android:layout_centerHorizontal="true"
                android:textStyle="bold|italic"
                android:textSize="18sp">
            </TextView>

            <EditText
                android:id="@+id/item_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_id"
                android:hint="@string/baby_item">
            </EditText>
            <EditText
                android:id="@+id/quantity_id"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name_id"
                android:hint="@string/quantity">
            </EditText>
            <EditText
                android:id="@+id/colour_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantity_id"
                android:hint="@string/colour">
            </EditText>
            <EditText
                android:id="@+id/size_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/colour_id"
                android:hint="@string/size">
            </EditText>
            <Button
                android:id="@+id/save_button_id"
                android:layout_below="@id/size_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:background="@color/colorAccent">
            </Button>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>